[package]
name = "triple_sender"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
bytes = "*"
failure = "*"
futures = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = "*"
toml = "0.5"

